--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -8,7 +8,8 @@ jobs:
   buildSnapshot:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -16,7 +17,21 @@ jobs:
           distribution: "adopt"
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
-      - name: Invoke Gradle check
+      - name: Update snapshot version
         uses: gradle/gradle-build-action@v2.3.0
         with:
-          arguments: "clean doBuild -Prelease=false"
+          arguments: "updateBuildVersion"
+      - name: Read version
+        id: read_version
+        uses: andstor/file-reader-action@v1
+        with:
+          path: build/version.txt
+      - name: Verify and build
+        uses: gradle/gradle-build-action@v2.3.0
+        with:
+          arguments: "check bootJar bootWar"
+      - name: Push version update
+        run: |
+          git add .
+          git commit "Update version to v${{ steps.read_version.outputs.contents }}" || true
+          git push -u
