--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -36,7 +36,8 @@ jobs:
           git checkout -b "release/v${{ steps.read_version.outputs.contents }}"
           git add .
           git commit "Update version to v${{ steps.read_version.outputs.contents }}"
-          git push -u
+          git tag "v${{ steps.read_version.outputs.contents }}"
+          git push --atomic origin "release/v${{ steps.read_version.outputs.contents }}" "v${{ steps.read_version.outputs.contents }}"
     outputs:
       version: ${{ steps.read_version.outputs.contents }}
   check:
@@ -113,3 +114,30 @@ jobs:
           artifacts: "mailspy-app/build/libs/*.jar,mailspy-app/build/libs/*.war"
           artifactErrorsFailBuild: true
           token: ${{ secrets.GITHUB_TOKEN }}
+  mergeReleaseBranch:
+    runs-on: ubuntu-latest
+    needs: createReleaseBranch, publishToNexus, publishToGithubReleases
+    steps:
+      - name: Check out master branch
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "adopt"
+      - name: Merge release branch
+        run: git merge "release/v${{ needs.createReleaseBranch.outputs.version }}"
+      - name: Restore snapshot version
+        uses: gradle/gradle-build-action@v2.3.0
+        with:
+          arguments: "updateBuildVersion -Prelease=false"
+      - name: Read version
+        id: read_version
+        uses: andstor/file-reader-action@v1
+        with:
+          path: build/version.txt
+      - name: Commit and push changes
+        run: |
+          git add .
+          git commit "Update version to v${{ steps.read_version.outputs.contents }}"
+          git push -u
