--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -31,6 +31,8 @@ jobs:
         uses: andstor/file-reader-action@v1
         with:
           path: build/version.txt
+      - name: Setup git user
+        uses: fregante/setup-git-user@v1
       - name: Create release branch
         run: |
           git checkout -b "release/v${{ steps.read_version.outputs.contents }}"
@@ -136,6 +138,8 @@ jobs:
         uses: andstor/file-reader-action@v1
         with:
           path: build/version.txt
+      - name: Setup git user
+        uses: fregante/setup-git-user@v1
       - name: Commit and push changes
         run: |
           git add .
