--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -125,7 +125,9 @@ jobs:
           java-version: "11"
           distribution: "adopt"
       - name: Merge release branch
-        run: git merge "release/v${{ needs.createReleaseBranch.outputs.version }}"
+        run: |
+          git fetch
+          git merge "release/v${{ needs.createReleaseBranch.outputs.version }}"
       - name: Restore snapshot version
         uses: gradle/gradle-build-action@v2.3.0
         with:
