--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -119,6 +119,9 @@ jobs:
     steps:
       - name: Check out master branch
         uses: actions/checkout@v3
+        with:
+          ref: master
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
