--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -8,8 +8,11 @@ jobs:
   buildSnapshot:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Check out master branch
         uses: actions/checkout@v3
+        with:
+          ref: master
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
