--- a/settings.gradle
+++ b/settings.gradle
@@ -59,6 +59,7 @@ dependencyResolutionManagement {
             version("spotless-changelog", "2.4.0")
             version("palantirformat", "2.25.0")
             version("lombokplugin", "5.0.0")
+            version("cargo", "2.9.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -92,6 +93,7 @@ dependencyResolutionManagement {
             plugin("spotless", "com.diffplug.spotless").versionRef("spotless")
             plugin("spotless-changelog", "com.diffplug.spotless-changelog").versionRef("spotless-changelog")
             plugin("lombok", "io.franzbecker.gradle-lombok").versionRef("lombokplugin")
+            plugin("cargo", "com.bmuschko.cargo").versionRef("cargo")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
