--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Push version update
         run: |
           git add .
-          git commit -m "Update version to v${{ steps.read_version.outputs.contents }}" || true
+          git commit -m "Update version to v${{ steps.read_version.outputs.contents }} [skip ci]" || true
           git push -u
