--- a/mailspy-app/build.gradle
+++ b/mailspy-app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     runtimeOnly project(":mailspy-core")
     implementation libs.logback.classic
     implementation libs.bundles.spring.boot.starters
+    implementation libs.spring.context.support
+    compileOnly libs.javax.mail
+    compileOnly libs.javax.activation
     developmentOnly libs.spring.boot.devtools
 }
 
