--- a/settings.gradle
+++ b/settings.gradle
@@ -60,6 +60,8 @@ dependencyResolutionManagement {
             version("palantirformat", "2.25.0")
             version("lombokplugin", "5.0.0")
             version("cargo", "2.9.0")
+            version("javax-mail", "1.6.2")
+            version("javax-activation", "1.2.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -83,6 +85,8 @@ dependencyResolutionManagement {
             library("jsonpath", "com.jayway.jsonpath", "json-path").versionRef("json-path")
             library("jackson-databind", "com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
             library("jackson-datatype-jsr310", "com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson")
+            library("javax-mail", "javax.mail", "javax.mail-api").versionRef("javax-mail")
+            library("javax-activation", "javax.activation", "javax.activation-api").versionRef("javax-activation")
 
             plugin("owasp-dependencycheck", "org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
             plugin("coditory-integrationtest", "com.coditory.integration-test").versionRef("coditory-integrationtest")
