--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: createReleaseBranch
     steps:
-      - name: Check out repository
+      - name: Check out release branch
         uses: actions/checkout@v3
         with:
           ref: "release/v${{ needs.createReleaseBranch.outputs.version }}"
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [createReleaseBranch, check]
     steps:
-      - name: Check out repository
+      - name: Check out release branch
         uses: actions/checkout@v3
         with:
           ref: "release/v${{ needs.createReleaseBranch.outputs.version }}"
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [createReleaseBranch, check]
     steps:
-      - name: Check out repository
+      - name: Check out release branch
         uses: actions/checkout@v3
         with:
           ref: "release/v${{ needs.createReleaseBranch.outputs.version }}"
@@ -147,3 +147,24 @@ jobs:
           git add .
           git commit -m "Update version to v${{ steps.read_version.outputs.contents }}"
           git push -u
+  deployDemo:
+    runs-on: ubuntu-latest
+    needs: [createReleaseBranch, mergeReleaseBranch]
+    steps:
+      - name: Check out release branch
+        uses: actions/checkout@v3
+        with:
+          ref: "release/v${{ needs.createReleaseBranch.outputs.version }}"
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "adopt"
+      - name: Deploy demo
+        uses: gradle/gradle-build-action@v2.3.0
+        with:
+          arguments: >
+            cargoRedeployRemote
+            -PcargoUsername=${{ secrets.CARGO_USERNAME }}
+            -PcargoPassword=${{ secrets.CARGO_PASSWORD }}
+            -PcargoUri=${{ secrets.CARGO_URI }}
