--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -55,6 +55,12 @@ jobs:
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+          cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Run checks
         uses: gradle/gradle-build-action@v2.3.0
         with:
@@ -72,6 +78,12 @@ jobs:
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+          cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Read GPG key ring
         run: |
           mkdir -p build
@@ -101,6 +113,12 @@ jobs:
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+          cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Build artifacts
         uses: gradle/gradle-build-action@v2.3.0
         with:
@@ -160,6 +178,12 @@ jobs:
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+          cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Deploy demo
         uses: gradle/gradle-build-action@v2.3.0
         with:
