ignore documentation changes in snapshot build

--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -3,6 +3,9 @@ name: Snapshot Build
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
 
 jobs:
   buildSnapshot:
