--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -66,6 +66,7 @@ jobs:
         uses: fregante/setup-git-user@v1
       - name: Push version update
         run: |
+          git pull
           git add .
           git commit -m "Update version to v${{ steps.read_version.outputs.contents }} [skip ci]" || true
           git push -u
