update outdated dependencies

--- a/settings.gradle
+++ b/settings.gradle
@@ -32,7 +32,7 @@ dependencyResolutionManagement {
             version("gradle", "7.5.1")
             version("node", "16.15.0")
             version("spring-framework", "5.3.23")
-            version("spring-boot", "2.7.4")
+            version("spring-boot", "2.7.5")
             version("slf4j", "1.7.36")
             version("subetha", "3.1.7")
             version("commons-io", "2.11.0")
@@ -40,20 +40,21 @@ dependencyResolutionManagement {
             version("jakarta-annotationsapi", "1.3.5")
             version("lombok", "1.18.24")
             version("testng", "7.6.1")
-            version("mockito", "4.8.0")
+            version("mockito", "4.8.1")
             version("mockito-testng", "0.4.26")
             version("logback", "1.2.11")
             version("assertj", "3.23.1")
             version("hamcrest", "2.2")
             version("json-path", "2.7.0")
-            version("jackson", "2.13.4")
-            version("owasp-dependencycheck", "7.2.1")
+            version("jackson", "2.13.4.2")
+            version("jackson-datatype", "2.13.4")
+            version("owasp-dependencycheck", "7.3.0")
             version("coditory-integrationtest", "1.4.4")
             version("nebula-optionalbase", "7.0.0")
             version("siouan-frontend", "6.0.0")
             version("checkstyle", "10.1")
             version("pmd", "6.45.0")
-            version("versions-plugin", "0.42.0")
+            version("versions-plugin", "0.43.0")
             version("jacoco", "0.8.8")
             version("spotless", "6.11.0")
             version("spotless-changelog", "2.4.0")
@@ -84,7 +85,7 @@ dependencyResolutionManagement {
             library("hamcrest", "org.hamcrest", "hamcrest").versionRef("hamcrest")
             library("jsonpath", "com.jayway.jsonpath", "json-path").versionRef("json-path")
             library("jackson-databind", "com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
-            library("jackson-datatype-jsr310", "com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson")
+            library("jackson-datatype-jsr310", "com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson-datatype")
             library("javax-mail", "javax.mail", "javax.mail-api").versionRef("javax-mail")
             library("javax-activation", "javax.activation", "javax.activation-api").versionRef("javax-activation")
 
