--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -25,6 +25,7 @@
         "inversify": "5.1.1",
         "inversify-react": "0.4.3",
         "mailparser": "3.2.0",
+        "mime-types": "2.1.35",
         "raf": "3.4.1",
         "react": "17.0.2",
         "react-bootstrap": "1.6.6",
@@ -40,6 +41,7 @@
         "@types/jest": "26.0.24",
         "@types/jest-when": "2.7.4",
         "@types/mailparser": "3.4.0",
+        "@types/mime-types": "2.1.1",
         "@types/node": "14.18.32",
         "@types/react": "17.0.50",
         "@types/react-dom": "17.0.17",
