--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -18,19 +18,21 @@
         "@fortawesome/fontawesome-svg-core": "1.2.36",
         "@fortawesome/free-solid-svg-icons": "5.15.4",
         "@fortawesome/react-fontawesome": "0.2.0",
+        "@stomp/stompjs": "6.1.2",
         "autobind-decorator": "2.4.0",
         "bootstrap": "4.6.2",
         "escape-html": "1.0.3",
         "file-saver": "2.0.5",
         "inversify": "5.1.1",
-        "inversify-react": "0.4.3",
+        "inversify-react": "1.0.2",
         "mailparser": "3.2.0",
         "mime-types": "2.1.35",
         "raf": "3.4.1",
         "react": "17.0.2",
         "react-bootstrap": "1.6.6",
         "react-dom": "17.0.2",
-        "reflect-metadata": "0.1.13"
+        "reflect-metadata": "0.1.13",
+        "sockjs-client": "1.6.1"
     },
     "devDependencies": {
         "@craco/craco": "6.4.5",
@@ -45,6 +47,7 @@
         "@types/node": "14.18.33",
         "@types/react": "17.0.52",
         "@types/react-dom": "17.0.18",
+        "@types/sockjs-client": "1.5.1",
         "@typescript-eslint/eslint-plugin": "4.33.0",
         "@typescript-eslint/parser": "4.33.0",
         "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
