--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/free-solid-svg-icons": "5.15.4",
         "@fortawesome/react-fontawesome": "0.2.0",
         "@stomp/stompjs": "6.1.2",
+        "@types/uuid": "8.3.4",
         "autobind-decorator": "2.4.0",
         "bootstrap": "4.6.2",
         "escape-html": "1.0.3",
@@ -32,7 +33,8 @@
         "react-bootstrap": "1.6.6",
         "react-dom": "17.0.2",
         "reflect-metadata": "0.1.13",
-        "sockjs-client": "1.6.1"
+        "sockjs-client": "1.6.1",
+        "uuid": "9.0.0"
     },
     "devDependencies": {
         "@craco/craco": "6.4.5",
