--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Run checks
         uses: gradle/gradle-build-action@v2.3.0
         with:
-          arguments: "check"
+          arguments: "check -PincludeFrontend"
   publishToNexus:
     runs-on: ubuntu-latest
     needs: [createReleaseBranch, check]
@@ -93,6 +93,7 @@ jobs:
         with:
           arguments: >
             publish
+            -PincludeFrontend
             -PsonatypeNexusUsername=${{ secrets.NEXUS_USERNAME }}
             -PsonatypeNexusPassword=${{ secrets.NEXUS_PASSWORD }}
             -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
@@ -122,7 +123,7 @@ jobs:
       - name: Build artifacts
         uses: gradle/gradle-build-action@v2.3.0
         with:
-          arguments: "bootJar bootWar"
+          arguments: "bootJar bootWar -PincludeFrontend"
       - name: Publish to GitHub Releases
         uses: ncipollo/release-action@v1
         with:
@@ -189,6 +190,7 @@ jobs:
         with:
           arguments: >
             cargoRedeployRemote
+            -PincludeFrontend
             -PcargoUsername=${{ secrets.CARGO_USERNAME }}
             -PcargoPassword=${{ secrets.CARGO_PASSWORD }}
             -PcargoUri=${{ secrets.CARGO_URI }}
