--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   checkPullRequest:
+    if: ! github.event.pull_request.draft
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
