--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -37,6 +37,8 @@
         "uuid": "9.0.0"
     },
     "devDependencies": {
+        "@babel/preset-react": "7.18.6",
+        "@babel/preset-typescript": "7.18.6",
         "@craco/craco": "6.4.5",
         "@sinonjs/fake-timers": "7.1.2",
         "@types/enzyme": "3.10.12",
