--- a/mailspy-frontend/tsconfig.json
+++ b/mailspy-frontend/tsconfig.json
@@ -19,7 +19,8 @@
         "noEmit": true,
         "strictNullChecks": false,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "noImplicitOverride": true
     },
     "include": ["src"]
 }
