--- a/settings.gradle
+++ b/settings.gradle
@@ -49,7 +49,6 @@ dependencyResolutionManagement {
             version("jackson", "2.13.4.2")
             version("jackson-datatype", "2.13.4")
             version("owasp-dependencycheck", "7.3.0")
-            version("coditory-integrationtest", "1.4.4")
             version("siouan-frontend", "6.0.0")
             version("checkstyle", "10.1")
             version("pmd", "6.45.0")
@@ -62,6 +61,7 @@ dependencyResolutionManagement {
             version("cargo", "2.9.0")
             version("javax-mail", "1.6.2")
             version("javax-activation", "1.2.0")
+            version("tomcat", "9.0.68")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -88,9 +88,9 @@ dependencyResolutionManagement {
             library("jackson-databind", "com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
             library("javax-mail", "javax.mail", "javax.mail-api").versionRef("javax-mail")
             library("javax-activation", "javax.activation", "javax.activation-api").versionRef("javax-activation")
+            library("tomcat-embed-websocket", "org.apache.tomcat.embed", "tomcat-embed-websocket").versionRef("tomcat")
 
             plugin("owasp-dependencycheck", "org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
-            plugin("coditory-integrationtest", "com.coditory.integration-test").versionRef("coditory-integrationtest")
             plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
             plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
             plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
