add ws integration test basics and fix smtp test

--- a/mailspy-core/build.gradle
+++ b/mailspy-core/build.gradle
@@ -99,6 +99,8 @@ testing {
                 implementation libs.hamcrest
                 implementation libs.jsonpath
                 implementation libs.tomcat.embed.websocket
+                compileOnly libs.lombok
+                annotationProcessor libs.lombok
             }
         }
     }
