--- a/settings.gradle
+++ b/settings.gradle
@@ -29,39 +29,39 @@ include "mailspy-frontend"
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            version("gradle", "7.5.1")
+            version("gradle", "7.6")
             version("node", "16.18.0")
             version("spring-framework", "5.3.24")
-            version("spring-boot", "2.7.5")
+            version("spring-boot", "2.7.6")
             version("slf4j", "1.7.36")
             version("subetha", "3.1.7")
             version("commons-io", "2.11.0")
             version("jakarta-servletapi", "4.0.4")
             version("jakarta-annotationsapi", "1.3.5")
             version("lombok", "1.18.24")
-            version("testng", "7.6.1")
-            version("mockito", "4.8.1")
-            version("mockito-testng", "0.4.26")
+            version("testng", "7.7.0")
+            version("mockito", "4.10.0")
+            version("mockito-testng", "0.4.30")
             version("logback", "1.2.11")
             version("assertj", "3.23.1")
             version("hamcrest", "2.2")
             version("json-path", "2.7.0")
             version("jackson", "2.13.4.2")
-            version("jackson-datatype", "2.13.4")
-            version("owasp-dependencycheck", "7.3.0")
+            version("owasp-dependencycheck", "7.4.1")
             version("siouan-frontend", "6.0.0")
             version("checkstyle", "10.1")
             version("pmd", "6.45.0")
-            version("versions-plugin", "0.43.0")
+            version("versions-plugin", "0.44.0")
             version("jacoco", "0.8.8")
-            version("spotless", "6.11.0")
-            version("spotless-changelog", "2.4.0")
+            version("spotless", "6.12.0")
+            version("spotless-changelog", "2.4.1")
             version("palantirformat", "2.25.0")
             version("lombokplugin", "5.0.0")
             version("cargo", "2.9.0")
             version("javax-mail", "1.6.2")
             version("javax-activation", "1.2.0")
-            version("tomcat", "9.0.68")
+            version("tomcat", "9.0.69")
+            version("snakeyaml", "1.33")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -90,6 +90,7 @@ dependencyResolutionManagement {
             library("javax-activation", "javax.activation", "javax.activation-api").versionRef("javax-activation")
             library("tomcat-embed-websocket", "org.apache.tomcat.embed", "tomcat-embed-websocket").versionRef("tomcat")
             library("lombok", "org.projectlombok", "lombok").versionRef("lombok")
+            library("snakeyaml", "org.yaml", "snakeyaml").versionRef("snakeyaml")
 
             plugin("owasp-dependencycheck", "org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
             plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
