--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -9,7 +9,7 @@
         "test": "craco test",
         "prettier-check": "prettier --check .",
         "prettier-apply": "prettier --write .",
-        "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\" --max-warnings 0",
+        "eslint": "eslint \"**/*.ts\" \"**/*.tsx\" --max-warnings 0",
         "versions-check": "npm-check-updates --target minor"
     },
     "author": "xylan.org",
@@ -19,54 +19,66 @@
         "@fortawesome/free-solid-svg-icons": "5.15.4",
         "@fortawesome/react-fontawesome": "0.2.0",
         "@stomp/stompjs": "6.1.2",
+        "@types/node": "18.11.17",
         "@types/uuid": "8.3.4",
+        "assert": "2.0.0",
         "autobind-decorator": "2.4.0",
         "bootstrap": "4.6.2",
+        "buffer": "6.0.3",
+        "crypto-browserify": "3.12.0",
         "escape-html": "1.0.3",
         "file-saver": "2.0.5",
-        "inversify": "5.1.1",
-        "inversify-react": "0.4.3",
-        "mailparser": "3.2.0",
+        "inversify": "6.0.1",
+        "inversify-react": "1.0.2",
+        "mailparser": "3.6.2",
         "mime-types": "2.1.35",
+        "path-browserify": "1.0.1",
+        "process": "0.11.10",
         "raf": "3.4.1",
         "react": "17.0.2",
         "react-bootstrap": "1.6.6",
         "react-dom": "17.0.2",
         "reflect-metadata": "0.1.13",
+        "setimmediate": "1.0.5",
         "sockjs-client": "1.6.1",
+        "stream-browserify": "3.0.0",
+        "util": "0.12.5",
         "uuid": "9.0.0"
     },
     "devDependencies": {
         "@babel/preset-react": "7.18.6",
         "@babel/preset-typescript": "7.18.6",
-        "@craco/craco": "6.4.5",
+        "@craco/craco": "7.0.0",
         "@sinonjs/fake-timers": "7.1.2",
         "@types/enzyme": "3.10.12",
         "@types/escape-html": "1.0.2",
         "@types/file-saver": "2.0.5",
-        "@types/jest": "26.0.24",
-        "@types/jest-when": "2.7.4",
+        "@types/jest": "29.2.4",
+        "@types/jest-when": "3.5.2",
         "@types/mailparser": "3.4.0",
         "@types/mime-types": "2.1.1",
-        "@types/node": "14.18.33",
         "@types/react": "17.0.52",
         "@types/react-dom": "17.0.18",
         "@types/sockjs-client": "1.5.1",
-        "@typescript-eslint/eslint-plugin": "4.33.0",
-        "@typescript-eslint/parser": "4.33.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
+        "@typescript-eslint/eslint-plugin": "5.47.0",
+        "@typescript-eslint/parser": "5.47.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
         "babel-plugin-transform-typescript-metadata": "0.3.2",
         "enzyme": "3.11.0",
+        "eslint": "8.30.0",
         "eslint-config-prettier": "8.5.0",
-        "eslint-output": "3.0.1",
-        "jest": "26.6.3",
-        "jest-mock-extended": "1.0.18",
+        "eslint-plugin-react": "7.31.11",
+        "jest": "29.3.1",
+        "jest-mock-extended": "3.0.1",
         "jest-when": "3.5.2",
-        "npm-check-updates": "13.1.5",
-        "prettier": "2.7.1",
-        "react-scripts": "4.0.3",
-        "ts-jest": "26.5.6",
-        "typescript": "4.7.4"
+        "npm-check-updates": "16.6.2",
+        "prettier": "2.8.1",
+        "react-scripts": "5.0.1",
+        "ts-jest": "29.0.3",
+        "typescript": "4.9.4"
+    },
+    "overrides": {
+        "@svgr/webpack": "6.5.1"
     },
     "browserslist": [
         ">0.2%",
@@ -77,7 +89,7 @@
     "homepage": ".",
     "jest": {
         "transform": {
-            "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+            "\\.(ts|tsx)$": "ts-jest"
         },
         "collectCoverageFrom": [
             "src/**/*.{ts,tsx}",
