--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -13,8 +13,11 @@ jobs:
   createReleaseBranch:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Check out develop branch
         uses: actions/checkout@v3
+        with:
+          ref: develop
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -81,7 +84,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
           cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Read GPG key ring
@@ -117,7 +120,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
           cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Build artifacts
@@ -141,30 +144,12 @@ jobs:
         with:
           ref: master
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: "11"
-          distribution: "adopt"
       - name: Setup git user
         uses: fregante/setup-git-user@v1
       - name: Merge release branch
         run: |
           git fetch
           git merge origin/release/v${{ needs.createReleaseBranch.outputs.version }}
-      - name: Restore snapshot version
-        uses: gradle/gradle-build-action@v2.3.0
-        with:
-          arguments: "updateBuildVersion -Prelease=false"
-      - name: Read version
-        id: read_version
-        uses: andstor/file-reader-action@v1
-        with:
-          path: build/version.txt
-      - name: Commit and push changes
-        run: |
-          git add .
-          git commit -m "Update version to v${{ steps.read_version.outputs.contents }}"
           git push -u
   deployDemo:
     runs-on: ubuntu-latest
@@ -182,7 +167,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
           cache-dependency-path: mailspy-frontend/package-lock.json
       - name: Deploy demo
