--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -2,7 +2,7 @@ name: Snapshot Build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "develop" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
@@ -11,10 +11,10 @@ jobs:
   buildSnapshot:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out master branch
+      - name: Check out develop branch
         uses: actions/checkout@v3
         with:
-          ref: master
+          ref: develop
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
